--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,14 +2,9 @@
   <h1>Simplest Possible AJAX</h1>
   <p>This contrived app will simulate a roll of a 6-sided die.</p>
 
-  <form method="post" action="/rolls">
+  <form id="roll" method="post" action="/rolls">
     <input type="submit" value="Roll the Die">
   </form>
 
-  <div id="die">
-    <% if @roll %>
-      <img src="/<%= @roll.value %>.png" title="<%= @roll.value %>" alt="the roll">
-    <% end %>
-  </div>
-
+  <%= erb :_die, layout: false %>
 </div>
